--- a/css/student_css/style_msgbox.css
+++ b/css/student_css/style_msgbox.css
@@ -483,7 +483,7 @@ div p.footer-txt {
   z-index: 100;
   padding: 2px 2px;
   background: #fece4b;
-  color: #f1f1f1;
+  color: black;
   font-weight: 400;
   width: 100%;
   text-align: center;
