--- a/css/student_css/vote_message.css
+++ b/css/student_css/vote_message.css
@@ -7,6 +7,7 @@
   margin: auto;
   background-color: #f8f8f8;
   margin-top: 8%;
+  position: relative;
 }
 
 .error-message {
@@ -140,6 +141,6 @@
     width: 70%;
   }
   .error-message-container{
-    width: 90%;
+    margin-top: 15%;
   }
 }
