--- a/css/admin_css/style1_addAdmin.css
+++ b/css/admin_css/style1_addAdmin.css
@@ -357,9 +357,9 @@ iframe {
 div.container {
   padding: 2rem;
   background: rgba(255, 255, 255, 0.7);
-  margin-top: 3%;
+  /* margin-top: 3%;
   margin-bottom: 3%;
-  border: 2px solid #124254;
+  border: 2px solid #124254; */
   width: 80%;
   height: auto;
 }
