--- a/css/student_css/style_monitor.css
+++ b/css/student_css/style_monitor.css
@@ -1,450 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  user-select: none;
-  box-sizing: border-box;
-  list-style: none;
-}
-
-nav {
-  background: #f8f8f8;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, .15), 0 3px 6px rgba(0, 0, 0, .23);
-  width: auto;
-  z-index: 3;
-}  
-
-nav:after {
-  content: '';
-  clear: both;
-  display: table;
-}
-
-nav h2 {
-  font-family:'Roboto-regular', sans-serif;;
-  font-weight: inherit;
-  font-size: 140%;
-  margin-bottom: 0px;
-  letter-spacing: 6px;
-  color: #124254;
-}
-
-nav h3 {
-  margin-top: 0px;
-  color: #124254;
-  padding-top: 5px;
-  font-weight: inherit;
-  font-size: 170%;
-  margin-bottom: 0px;
-  letter-spacing: 6px;
-  font-family: 'genericaregular', sans-serif;
-}
-
-nav .logo {
-  float: left;
-  position: relative;
-  line-height: 80px;
-  margin-top: 5px;
-  margin-left: 40px;
-}
-
-nav ul {
-  float: right;
-  padding: 0;
-  height: 80px;
-  margin-bottom: 0;
-  list-style: none;
-  position: relative;
-  text-align: center;
-  z-index: 4;
-}
-
-nav ul li {
-  /* float: left; */
-  display: inline-block;
-  height: 80px;
-  background: #f8f8f8;
-  text-align: center;
-  width: 150px;
-}
-
-nav ul li a {
-  color: black;
-  line-height: 70px;
-  text-decoration: none;
-  font-size: 1.6em;
-  padding: 8px 15px;
-  letter-spacing: 1px;
-  font-family: 'Roboto-regular', sans-serif;;
-}
-
-nav ul li a:visited {
-  color: black;
-  text-decoration: none;
-}
-
-nav ul li a:hover {
-  color: black;
-  text-decoration: none;
-}
-
-nav ul li a:active {
-  text-decoration: none;
-}
-
-nav ul li:hover {
-  background-color: #fece4b;
-}
-
-nav ul li a:active {
-  color: green;
-}
-
-nav ul ul {
-  position: absolute;
-  top: 90px;
-  border-top: 3px solid #18566e;
-  opacity: 0;
-  visibility: hidden;
-  transition: top .3s;
-}
-
-nav ul ul li {
-  height: 50px;
-  position: relative;
-  margin: 0px;
-  float: none;
-  display: list-item;
-}
-
-nav ul ul li a {
-  line-height: 50px;
-}
-
-nav ul ul li a.elec-text {
-  font-size: 1.2em;
-}
-
-nav ul ul li .logout::before {
-  content: "\f2f5";
-  font-family: "Font Awesome 5 Free";
-  padding: 0 10px 0 0;
-}
-
-nav ul ul li a:link {
-  color: rgb(0, 0, 0);
-}
-
-nav ul ul li a:visited {
-  color: white;
-  text-decoration: none;
-}
-
-nav ul ul li a:hover {
-  color: white;
-  box-shadow: none;
-  text-decoration: none;
-}
-
-nav ul ul li:hover {
-  background-color: #124254;
-  text-decoration: none;
-}
-
-nav ul ul li a:active {
-  color: #1b1b1b;
-  box-shadow: none;
-  text-decoration: none;
-}
-
-nav ul ul ul {
-  border-top: none;
-}
-
-nav ul ul ul li {
-  position: relative;
-  top: -60px;
-  left: 150px;
-}
-
-nav ul li:hover>ul {
-  top: 70px;
-  opacity: 1;
-  visibility: visible;
-}
-
-nav ul ul li {
-  background: #18566e;
-  position: relative;
-  margin: 0px;
-  width: 150px;
-  font-size: 0.8em;
-  float: none;
-  display: list-item;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
-  z-index: 1;
-}
-
-nav ul ul li a {
-  color: black;
-  line-height: 50px;
-  font-family: 'Roboto-regular', sans-serif;;
-}
-
-nav ul ul ul li {
-  position: relative;
-  font-size: 1em;
-  top: -60px;
-  left: 150px;
-}
-
-.show, .icon, input {
-  display: none;
-}
-
-/* .fa-plus{
-  font-size: 15px;
-  margin-left: 40px;
-} */
-
-@media all and (max-width: 968px) {
-  nav ul {
-    margin-right: 0px;
-    margin-left: 0px;
-    float: left;
-  }
-  /* nav .logo{
-    padding-left: 30px;
-    width: auto;
-    float: left;
-  } */
-  .show+a, ul {
-    display: none;
-  }
-  nav ul li, nav ul ul li {
-    border-top: 3px solid #18566e;
-    display: block;
-    width: 100%;
-  }
-  nav ul li a:hover {
-    box-shadow: none;
-  }
-  .show {
-    display: block;
-    background-color: #18566e;
-    color: white;
-    font-size: 1.2em;
-    padding: 0 20px;
-    line-height: 70px;
-    cursor: pointer;
-  }
-  .show:hover {
-    color: white;
-  }
-  .icon {
-    display: block;
-    color: black;
-    position: absolute;
-    top: 0;
-    right: 40px;
-    line-height: 70px;
-    cursor: pointer;
-    font-size: 25px;
-  }
-  nav ul ul {
-    top: 70px;
-    border-top: 0px;
-    border-bottom: 0px;
-    float: none;
-    position: static;
-    display: none;
-    opacity: 1;
-    visibility: visible;
-  }
-  nav ul ul a {
-    left: 0;
-  }
-  /* nav ul ul ul a{
-    padding-left: 80px;
-  }
-  nav ul ul ul li{
-    position: static;
-  } */
-  [id^=btn]:checked+ul {
-    width: 100%;
-    left: 0;
-    display: block;
-  }
-  nav ul ul li {
-    border-top: 0px;
-    border-bottom: 0px;
-  }
-  span.cancel:before {
-    content: '\f00d';
-  }
-}
-
-header {
-  font-size: 35px;
-  font-weight: 600;
-  padding: 10px 0;
-}
-
-p {
-  font-size: 30px;
-  font-weight: 500;
-  font-family: 'generica-regular', sans-serif;
-}
-
-article p {
-  font-family: 'Roboto-regular', sans-serif;;
-  color: #124254;
-  font-weight: inherit;
-  font-size: 20px;
-  letter-spacing: 3px;
-  position: relative;
-}
-
-article h1 {
-  font-family: 'genericaregular', sans-serif;
-  color: #18566e;
-  font-weight: inherit;
-  font-size: 55px;
-  position: relative;
-  letter-spacing: 3px;
-  margin-top: 10px;
-}
-
-/* Container for flexboxes */
-
-section {
-  display: -webkit-flex;
-  display: flex;
-  margin-left: 30px;
-  margin-top: 100px;
-  max-width: 800px;
-  float: left;
-}
-
-/* Style the content */
-
-article {
-  -webkit-flex: 3;
-  -ms-flex: 3;
-  flex: 3;
-  padding: 10px;
-}
-
-/* For logos on top of welcome banner */
-
-img.logos {
-  float: left;
-  padding-left: 10px;
-  height: 90px;
-  width: 100px;
-  margin-bottom: 2em;
-}
-
-.logo-container {
-  position: relative;
-  display: -webkit-flex;
-  display: flex;
-  margin-left: 0px;
-  margin-top: 0px;
-  max-width: 700px;
-}
-
-/* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */
-
-@media (max-width: 600px) {
-  body, section, .container {
-    -webkit-flex-direction: column;
-    flex-direction: column;
-  }
-}
-
-.footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 5%;
-  padding: 5px 0px;
-  background-color: #fece4b;
-  text-align: center;
-}
-
-div p.footer-txt {
-  position: relative;
-  top: .5em;
-  font-family: 'Roboto-regular', sans-serif;;
-  letter-spacing: 7px;
-  font-size: 1em;
-  color: black;
-}
-
-nav img.user-profile {
-  margin-top: 0;
-  height: 40px;
-  width: 40px;
-}
-
-/*countdown*/
-
-.container {
-  color: #333;
-  float: right;
-  text-align: center;
-  margin-right: 50px;
-  top: 50px;
-  bottom: 0;
-  position: relative;
-  max-width: 500px;
-}
-
-div h1 {
-  font-weight: normal;
-  letter-spacing: .125rem;
-  text-transform: uppercase;
-  font-size: 4em;
-  color: black;
-  margin-bottom: .8em;
-}
-
-div ul {
-  /* max-width: 90%; */
-  border: 1px solid #ffc423;
-  border-width: 3px;
-  text-align: center;
-  padding: 0;
-}
-
-div li {
-  display: inline-block;
-  font-size: 1.5em;
-  list-style-type: none;
-  padding: 1em;
-  text-transform: uppercase;
-  color: black;
-}
-
-div li span {
-  display: block;
-  font-size: 4.5rem;
-}
-
-#content {
-  display: flex;
-  padding: 1rem;
-  position: relative;
-}
-
-div p.elec-guide-txt {
-  font-family: 'Roboto-regular', sans-serif;;
-  text-align: justify;
-  font-size: 1.6em;
-  margin-top: 3em;
-}
-
 /*Header*/
 .bheader {
   z-index: 100;
@@ -576,240 +129,6 @@ div p.elec-guide-txt {
   margin-top: 100px;
 }
 
-/*Election Results*/
-
-.Belec_container {
-  padding: 60px;
-  display: grid;
-  grid-gap: 20px;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 2fr));
-  grid-template-rows: repeat(5, 200px);
-  text-align: center;
-}
-
-.Belec_container>div>img {
-  border-radius: 50%;
-}
-
-.Belec_container>div>p {
-  font-family: 'Roboto-regular', sans-serif;;
-  font-size: 15px;
-  object-fit: cover;
-  text-align: center;
-}
-.Bnum_votes {
-  margin-top: 1%;
-  font-family: 'Roboto-regular', sans-serif;;
-  color: rgb(177, 88, 88);
-  font-weight: bold;
-  text-align: center;
-}
-.Bname {
-  font-family: 'Roboto-regular', sans-serif;;
-  font-size: 5%;
-  object-fit: cover;
-  text-align: center;
-  color: #003d55;
-}
-
-.Bposition {
-  font-family: 'Roboto-regular', sans-serif;;
-  font-size: 2%;
-  color:#1d6986;
-  font-weight: bold;
-  text-align: center;
-
-}
-
-.Bparty {
-  font-family: 'Roboto-regular', sans-serif;;
-  font-size: 2%;
-  color:black;
-  text-align: center;
-}
-
-/* Vote Status Percentage */
-.Bcon{
-  width: 60%;
-  margin-left:auto;
-  margin-right:auto;
-  margin-bottom: 10%;
-}
-
-.Bvotestat p{
-  font-family: 'Roboto-regular', sans-serif;
-  color: #ffc423;
-  font-weight: inherit;
-  font-size: 300%;
-  position: relative;
-  letter-spacing: 3px;
-  text-align: center;
-  margin-top: 5%;
-  z-index:-1000;
- }
-.Bvcontainer{
-  position: relative;
-  width: 100%;
-  justify-content: space-around;
-  display: grid; 
-  grid-column-gap: 20px; 
-  grid-row-gap: 5%;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  grid-template-rows: repeat(1, 250px);  
-  /* z-index: -1000; */
-}
-.Bvcontainer .Bcard{
-  position: relative;
-  width: 100%;
-  display: grid;
-  justify-content: center;
-  align-items: center;
-  height: 300px;
-  border-radius: 4px;
-  text-align: center;
-  transition: 0.5s;
-}
-.Bvcontainer .Bcard:before{
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0%;
-  width: 100%;
-  height: rgba(73, 163, 0, 0.03);
-  pointer-events: none;
-}
-.Bpercent{
-  position:relative;
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
-  background:#ffc423;
-  z-index: 1000;
-}
-.Bpercent .Bnumber{
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
-}
-.Bpercent .Bnumber h2{
-  color:#003d55;
-  font-weight: 700;
-  margin-top: 55px;
-  font-size: 30px;
-  transition: 0.5s;
-  margin-left: 10px;
-}
-
-
-.Bbox a{
-  color:white;
-  font-family: 'Roboto-regular', sans-serif;
-  font-size: 20px;
-  text-align: center;
-}
-.Bbox a:hover{
-  color: #124254;
-  /* color: #ffc423; */
-}
-
-.Bcard:hover .Bpercent .Bnumber h2{
-  color: #124254;
-  font-size: 40px;
-}
-.Bpercent .Bnumber h2 span{
-  font-size:24px;
-  color: #777;
-  transition: 1s;
-}
-svg{
-  position: relative;
-  width: 150px;
-  height:150px;
-  z-index: -1000;
-}
-svg circle{
-  width: 100%;
-  height: 100%;
-  fill: none;
-  stroke: #003d55;
-  stroke-width: 10;
-  stroke-linecap: round;
-  transform: translate(5px, 5px);
-}
-svg circle:nth-child(2){
-  stroke-dasharray: 440;
-  stroke-dashoffset: 440;
-}
-.Bcard:nth-child(1) svg circle:nth-child(2){
-  stroke-dashoffset: calc(440 - (440 * 90) / 100);
-  stroke: #ff9124;
-}
-.Bcard:nth-child(2) svg circle:nth-child(2){
-  stroke-dashoffset: calc(440 - (440 * 85) / 100);
-  stroke: #ff9124;
-}
-.Bcard:nth-child(3) svg circle:nth-child(2){
-  stroke-dashoffset: calc(440 - (440 * 25) / 100);
-  stroke: #ff9124;
-}
-.Bcard:nth-child(4) svg circle:nth-child(2){
-  stroke-dashoffset: calc(440 - (440 * 37) / 100);
-  stroke:  #ff9124;
-}
-.Bcard:nth-child(5) svg circle:nth-child(2){
-  stroke-dashoffset: calc(440 - (440 * 100) / 100);
-  stroke:  #ff9124;
-}
-.Bcard:nth-child(6) svg circle:nth-child(2){
-  stroke-dashoffset: calc(440 - (440 * 45) / 100);
-  stroke:  #ff9124;
-}
-
-/*Vote Status per grade level*/
-.Bvotestatus p{
-  font-family: 'Roboto-regular', sans-serif;
-  color: #ffc423;
-  font-size: 300%;
-  position: relative;
-  letter-spacing: 1px;
-  text-align: center;
-  z-index:-1000;
-  margin-top: 15px;
- }
-.table{
- text-align: center;
- margin-top: 0.5%;
-}
-.Bvs_gradelevel p{
-  font-family: 'Roboto-regular', sans-serif;
-  font-size: 20px;
-  position: relative;
-  letter-spacing: 3px;
-  text-align: center;
-  z-index:-1000;
-  margin-top: -25px;
-}
-.Bnp{
-  margin-top: 20px;
-  display: flex;
-  align-content: center;
-  justify-content: center;
-}
-.Bnp a{
-  text-decoration: none;
-  display: inline-block;
-  padding: 8px 24px;
-}
-.Bnp a:hover {
-  background-color: #ffc423;
-  color: #1d6986;
-}
 
 /* Election Archives Folder*/
 
@@ -858,30 +177,6 @@ svg circle:nth-child(2){
   border-radius: 60%;
 }
 
-.Bcard:hover {
-  /*transform:translateY(-10px);*/
-  box-shadow: 0 15px 35px rgba(160, 137, 10, 0.788);
-}
-
-.Bcard:before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0%;
-  width: 100%;
-  height: 100%;
-  /*background: rgba(73, 163, 0, 0.03);*/
-  pointer-events: none;
-  z-index: 1;
-}
-
-svg {
-  position: relative;
-  margin-top: -240px;
-  width: 150px;
-  height: 150px;
-  z-index: 1000;
-}
 
 /*Election Archives List*/
 
@@ -971,3 +266,99 @@ svg {
   font-size: 100%;
   margin-top: -5px;
 }
+
+/*Election Results*/
+
+.Belec_container {
+  padding: 60px;
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 2fr));
+  grid-template-rows: repeat(5, 200px);
+  text-align: center;
+  margin-top: 1%;
+}
+
+.Belec_container>div>img {
+  border-radius: 50%;
+}
+
+.Belec_container>div>p {
+  font-family: 'Roboto-regular', sans-serif;;
+  font-size: 15px;
+  object-fit: cover;
+  text-align: center;
+}
+.Bnum_votes {
+  margin-top: 1%;
+  font-family: 'Roboto-regular', sans-serif;;
+  color: rgb(177, 88, 88);
+  font-weight: bold;
+  text-align: center;
+}
+.Bname {
+  font-family: 'Roboto-regular', sans-serif;;
+  font-size: 5%;
+  object-fit: cover;
+  text-align: center;
+  color: #003d55;
+}
+
+.Bposition {
+  font-family: 'Roboto-regular', sans-serif;;
+  font-size: 2%;
+  color:#1d6986;
+  font-weight: bold;
+  text-align: center;
+
+}
+
+.Bparty {
+  font-family: 'Roboto-regular', sans-serif;;
+  font-size: 2%;
+  color:black;
+  text-align: center;
+}
+
+.bgraph {
+  position: relative;
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/*Vote Percentage*/
+.bgraph svg {
+  width: 100%;
+  height: 100%;
+}
+
+.bgraph svg text {
+  font-family: 'Roboto-regular', sans-serif;
+  font-weight: bold;
+  font-size: 150%;
+  fill: #264A60;
+  text-align: center;
+}
+
+.bgraph svg .background {
+  fill: #264A60;
+}
+
+.bgraph svg .visual {
+  fill: #EFC100;
+}
+
+hr {
+  display: block;
+  margin-top: 20%;
+  margin-left: auto;
+  margin-right: auto;
+  border-width: 10px;
+  color: black;
+}
+
+/*Bar Graph*/
