--- a/css/student_css/style_monitor.css
+++ b/css/student_css/style_monitor.css
@@ -346,57 +346,64 @@
 	font-family: 'Roboto-regular', sans-serif;
   }
 
+
+/*Bar Graph*/
 .Belec_container {
   padding: 60px;
   display: grid;
   grid-gap: 20px;
   grid-template-columns: repeat(auto-fit, minmax(200px, 2fr));
-  grid-template-rows: repeat(5, 200px);
-  text-align: center;
-  margin-top: 1%;
-}
-
-.Belec_container>div>img {
-  border-radius: 50%;
-}
-
-.Belec_container>div>p {
-  font-family: 'Roboto-regular', sans-serif;;
-  font-size: 15px;
-  object-fit: cover;
+  grid-template-rows: repeat(5, 100px);
   text-align: center;
 }
-.Bnum_votes {
-  margin-top: 1%;
-  font-family: 'Roboto-regular', sans-serif;;
-  color: rgb(177, 88, 88);
+
+.style-1 {
+  list-style-type: none;
+  padding: 0;
+}
+.style-1 li {
+  background: #ffb700;
+  color: black;
   font-weight: bold;
-  text-align: center;
+  max-width: 500px;
+  margin-bottom: 4px;
+  border-radius: 2px;
+  white-space: nowrap;
+  position: relative;
 }
-.Bname {
-  font-family: 'Roboto-regular', sans-serif;;
-  font-size: 5%;
-  object-fit: cover;
-  text-align: center;
-  color: #003d55;
+.style-1 em {
+  font-style: normal;
+  padding: 9px;
+  display: inline-block;
 }
 
-.Bposition {
-  font-family: 'Roboto-regular', sans-serif;;
-  font-size: 2%;
-  color:#2597c4 ;
+.style-2 {
+  list-style-type: none;
+  padding: 0;
+  justify-content: center;
+  align-items: center;
+}
+.style-2 li {
+  background: #1f6f8f;
+  color: white;
   font-weight: bold;
-  text-align: center;
-
+  max-width: 500px;
+  margin-bottom: 4px;
+  border-radius: 2px;
+  white-space: nowrap;
+  position: relative;
 }
-
-.Bparty {
-  font-family: 'Roboto-regular', sans-serif;;
-  font-size: 2%;
-  color:black;
-  text-align: center;
+.style-2 em {
+  font-style: normal;
+  padding: 8px;
+  display: inline-block;
 }
-
-
-
-/*Bar Graph*/
+.style-2 span {
+  float: right;
+  text-align: right;
+  border-radius: 2px;
+  padding: 8px;
+  width: 70px;
+  background: rgba(0, 0, 0, 0.3);
+  animation: grow-padding-left 1s;
+}
