--- a/css/admin_css/style_AdminDash.css
+++ b/css/admin_css/style_AdminDash.css
@@ -394,7 +394,7 @@ div.container {
   width: 100% !important;
   height: auto;
   opacity: 80%;
-  font-size: 10ptrem;
+  font-size: 10rem;
 }
 
 #ADdataTable {
