--- a/css/student_css/style_monitor.css
+++ b/css/student_css/style_monitor.css
@@ -27,12 +27,12 @@
   padding: 2px 2px;
   margin-top: 10%;
   color: #1f6f8f;
-  font-weight: 400;
+  font-weight: inherit;
   width: 100%;
   text-align: center;
   font-family: 'Roboto-regular', sans-serif;
   letter-spacing: 6px;
-  margin-top: 1%;
+  margin-top: auto;
 }
 
 /* On-Going Election*/
@@ -77,95 +77,7 @@
   font-size: 100%;
 }
 
-/*No On-going Election*/
-
-.Belec2 p {
-  font-family:'Roboto-regular', sans-serif;;
-  color: #1f6f8f;
-  font-weight: inherit;
-  font-size: 400%;
-  margin-top: 10%;
-  letter-spacing: 4px;
-  text-align: center;
-}
-
-.Bon2 h1 {
-  font-family: 'Roboto-regular', sans-serif;;
-  color: #142d4f;
-  font-weight: inherit;
-  font-size: 550%;
-  letter-spacing: 4px;
-  text-align: center;
-  margin-top: 1%;
-}
-
-.Bon3 h1 {
-  font-family: 'Roboto-regular', sans-serif;;
-  color: #142d4f;
-  font-weight: inherit;
-  font-size: 100%;
-  letter-spacing: 4px;
-  text-align: center;
-  margin-top: 8%;
-}
-
-/* End of Election*/
-
-.Belec_end1 p {
-  font-family: 'Roboto-regular', sans-serif;;
-  color: #1f6f8f;
-  font-weight: inherit;
-  font-size: 400%;
-  margin-top: 4%;
-  letter-spacing: 4px;
-  text-align: center;
-}
-
-.Belec_end2 h1 {
-  font-family: 'Roboto-regular', sans-serif;;
-  color: #142d4f;
-  font-weight: inherit;
-  font-size: 550%;
-  position: relative;
-  letter-spacing: 4px;
-  text-align: center;
-  margin-top: -0.8%;
-}
-
-.Belec_end3 p {
-  font-family:'Roboto-regular', sans-serif;;
-  color: #1f6f8f;
-  font-weight: inherit;
-  font-size: 500%;
-  margin-top: -4%;
-  letter-spacing: 4px;
-  text-align: center;
-}
-
-.Bres_end h1 {
-  font-family: 'Roboto-regular', sans-serif;;
-  color: #142d4f;
-  font-weight: inherit;
-  font-size: 150%;
-  position: relative;
-  letter-spacing: 4px;
-  text-align: center;
-  margin-top: 100px;
-}
-
-
 /* Election Archives Folder*/
-
-.Barch p {
-  font-family: Roboto regular, sans-serif;
-  color: #142d4f;
-  font-weight: inherit;
-  font-size: 300%;
-  position: relative;
-  letter-spacing: 1px;
-  text-align: center;
-  margin-top: 40px;
-}
 
 .Bimg img {
   position: relative;
@@ -201,19 +113,19 @@
   border-radius: 60%;
 }
 
-
 /*Election Archives List*/
 
-.Barch_year {
-  font-family: 'Roboto-regular', sans-serif;;
+.Barch_year h3 {    
+  z-index: 100;
+  padding: 2px 2px;
   color: #1f6f8f;
-  font-weight: inherit;
-  font-size: 200%;
-  position: relative;
-  letter-spacing: 3px;
+  font-weight: 400;
+  width: 100%;
   text-align: center;
-  margin-top: 50%;
-}
+  font-family: 'Roboto-regular', sans-serif;
+  letter-spacing: 6px;
+  margin-top: 1%;
+  }
 
 .Barch_container {
   padding: 30px;
@@ -223,8 +135,8 @@
   grid-template-columns: repeat(auto-fit, minmax(200px, 5fr));
   grid-template-rows: repeat(autofit, 30%);
   text-align: center;
-  margin-top: -5px;
   max-width: 80%;
+  margin-top: 3%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -291,23 +203,23 @@
   margin-top: -5px;
 }
 
-/*Election Results*/
-
+/*Circular Progress Graph*/
 .Bcon {
-	width: 80%;
+	max-width: 80%;
+  z-index: 1000;
 	margin-left: auto;
 	margin-right: auto;
 }
 
 .Bvcontainer{ 
 	position: relative;
-	max-width: 1500px;
+	max-width: auto;
 	justify-content: space-around;
 	display: grid; 
 	grid-column-gap: 10%; 
 	grid-row-gap: 5%;
 	grid-template-columns: repeat(auto-fit, minmax(100px, 2fr));
-	grid-template-rows: repeat(1, 200%);  
+	grid-template-rows: repeat(5, 200%);  
 }
 .Bvcontainer .Bcard {
 	position: relative;
@@ -329,7 +241,7 @@
 	height: rgba(73, 163, 0, 0.03);
 	pointer-events: none;
 }
-.Bbox1 a {
+.Bbox1 p {
 	color: #ffb700;
 	font-family: 'Roboto-regular', sans-serif;
 	font-size: 15px;
@@ -337,7 +249,7 @@
 	padding: 10px;
 	background-color: black;
 }
-.Bbox1 a:hover{
+.Bbox1 p:hover{
 	color: white ;
 }
 .circle{
@@ -346,15 +258,18 @@
 	font-family: 'Roboto-regular', sans-serif;
   }
 
-
 /*Bar Graph*/
+
+
+
 .Belec_container {
-  padding: 60px;
+  padding: 5%;
   display: grid;
   grid-gap: 20px;
   grid-template-columns: repeat(auto-fit, minmax(200px, 2fr));
-  grid-template-rows: repeat(5, 100px);
+  grid-template-rows: repeat(5, auto);
   text-align: center;
+  z-index: -1;
 }
 
 .style-1 {
@@ -365,7 +280,7 @@
   background: #ffb700;
   color: black;
   font-weight: bold;
-  max-width: 500px;
+  max-width: auto;
   margin-bottom: 4px;
   border-radius: 2px;
   white-space: nowrap;
@@ -387,7 +302,7 @@
   background: #1f6f8f;
   color: white;
   font-weight: bold;
-  max-width: 500px;
+  max-width: auto;
   margin-bottom: 4px;
   border-radius: 2px;
   white-space: nowrap;
